fix scrollbar styles

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,12 +7,12 @@ html {
     overflow-x: hidden;
 }
 ::-webkit-scrollbar {
-    width: 0px;  /* remove scrollbar space */
+    width: 7px;  /* remove scrollbar space */
     background: transparent;  /* optional: just make scrollbar invisible */
 }
 /* optional: show position indicator in red */
 ::-webkit-scrollbar-thumb {
-    background: #FF0000;
+    background: whitesmoke;
 }
 
 body {
@@ -21,7 +21,6 @@ body {
     overflow-x: hidden;
     overflow-y: visible;
     background: #141C24;
-
 }
 
 article,
